--- a/style/main.scss
+++ b/style/main.scss
@@ -29,7 +29,11 @@ body {
 }
 
 main {
-	padding: 2rem 0;
+	padding: 0;
+
+	@media only screen and (min-width: 761px) {
+		padding: 2rem 0;		
+	}
 }
 
 .container {
@@ -38,11 +42,19 @@ main {
 }
 
 h1 {
-	font-size: 6rem;
+	font-size: 3rem;
 	font-weight: 900;
 	font-style: italic;
 	letter-spacing: 3px;
 	margin: 0.5rem 0;
+
+	@media only screen and (min-width: 481px) {
+		font-size: 4rem;
+	}
+
+	@media only screen and (min-width: 761px) {
+		font-size: 6rem;
+	}
 
 }
 
@@ -68,7 +80,15 @@ p {
 }
 
 .header-subhead {
-	font-size: 1.5rem;
+	font-size: 1rem;
+
+	@media only screen and (min-width: 481px) {
+		font-size: 1.25rem;
+	}
+
+	@media only screen and (min-width: 761px) {
+		font-size: 1.5rem;
+	}
 }
 
 @keyframes pulseSize {
@@ -109,20 +129,26 @@ p {
 
 .grid {
 	display: flex;
+	flex-direction: column;
+
+	@media only screen and (min-width: 761px) {
+		flex-direction: row;
+	} 
 }
 
 .grid-cell {
 	margin: 1.5rem 1rem;
-	width: 100%;
 }
 
 .contentArea {
     background-color: rgba(228,246,255,0.9);
     border-radius: 15px;
 	color: #2E4756;
-	display: flex;
-	flex-direction: column;
-	padding: 2rem;
+	padding: 1rem;
+
+	@media only screen and (min-width: 761px) {
+		padding: 2rem;
+	}
 }
 
 .contentArea-grid {
@@ -135,7 +161,10 @@ p {
 	border: 3px solid #0BA2DC;
 	min-height: 16rem;
 	padding: 0.5rem;
-	width: 100%;
+
+	@media only screen and (min-width: 761px) {
+		width: 100%;
+	}
 
 	&::-webkit-input-placeholder {
 	   font-size: 1.75rem;
