Re-enable animation.

--- a/style/main.scss
+++ b/style/main.scss
@@ -141,9 +141,9 @@ p {
 }
 
 .screamyText {
-    // animation: pulseSize 4s forwards;
+    animation: pulseSize 4s forwards;
     text-transform: uppercase;
-    // transform-origin: bottom;
+    transform-origin: bottom;
     display: inline-block;
 }
 
