--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Un-Shouter - Replace ALLCAPS Text with Sentence-Case">
     <meta name="viewport" content="width=device-width">
     <meta property="og:title" content="Un-Shouter" />
-    <meta property="og:description" content="Convert obnoxious ALLCAPS TEXT into a pleasing, properly capitalized tone." />
+    <meta property="og:description" content="Conversion tool for changing obnoxious, shouty ALLCAPS TEXT into a pleasing, sentence-cased tone. Maintains proper capitalization for sentences and first-person pronouns." />
     <meta property="og:url" content="http://unshouter.com" />
-    <meta property="og:image" content="http://unshouter.com/image/unshouter_banner.png" />
+    <meta property="og:image" content="http://unshouter.com/image/unshouter_banner.jpg" />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/767618/761868/css/fonts.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/style/normalize.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/style/main.css">
