--- a/style/main.scss
+++ b/style/main.scss
@@ -152,38 +152,40 @@ p {
         opacity: 1;
         transform: scale(1);
     }
-    10% { transform: scale(1.15); }
-    20% { transform: scale(1); }
-    30% {
+    20% { transform: scale(1.15); }
+    40% { transform: scale(1); }
+    60% {
         transform: scale(1.15);
     }
-    40% {
+    80% {
         opacity: 1;
         transform: scale(1);
     }
-    50% {
+    100% {
         opacity: 0;
         transform: scale(1);
-        text-transform: uppercase;
-    }
-    75% {
-        text-transform: none;
-    }
-    100% { 
-        opacity: 1;
-        margin-right: 0;
-        text-transform: none;
     }
 }
 
 .screamyText {
-    -webkit-animation: pulseSize 4s forwards;
-            animation: pulseSize 4s forwards;
+    opacity: 0;
+    -webkit-animation: pulseSize 2s;
+            animation: pulseSize 2s;
     text-transform: uppercase;
     -webkit-transform-origin: bottom;
       -ms-transform-origin: bottom;
           transform-origin: bottom;
     display: inline-block;
+    transition: opacity 1s linear;
+
+    &.done {
+        transition: opacity 1s linear;
+        text-transform: none;
+    }
+
+    &.done.fadeIn {
+        opacity: 1;
+    }
 }
 
 .grid {
