--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,7 @@
     <meta property="og:title" content="Un-Shouter" />
     <meta property="og:description" content="Conversion tool for changing obnoxious, shouty ALLCAPS TEXT into a pleasing, sentence-cased tone. Maintains proper capitalization for sentences and first-person pronouns." />
     <meta property="og:url" content="http://unshouter.com" />
-    <meta property="og:image" content="http://unshouter.com/image/unshouter_banner.jpg" />
-    <meta property="og:image:url" content="http://unshouter.com/image/unshouter_banner.jpg" />
+    <meta property="og:image" content="http://daftgopher.github.io/un-shouter/image/unshouter_banner.jpg" />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/767618/761868/css/fonts.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/style/normalize.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/style/main.css">
