Display warning for old IE versions.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,8 @@
         {% if page.script %}
             <script src="{{ site.baseurl }}/script/{{page.script}}.js"></script>
         {% endif %}
+        <script src="{{ site.baseurl }}/script/webgl_test.js"></script>
+        <script src="{{ site.baseurl }}/script/ie_warning.js"></script>
         <script>
             var screamyText = document.getElementById('screamyText');
             var header = document.getElementById('site-header');
