--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,9 @@
     <meta property="og:description" content="Conversion tool for changing obnoxious, shouty ALLCAPS TEXT into a pleasing, sentence-cased tone. Maintains proper capitalization for sentences and first-person pronouns." />
     <meta property="og:url" content="http://unshouter.com" />
     <meta property="og:image" content="http://daftgopher.github.io/un-shouter/image/unshouter_banner.png" />
-    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/767618/761868/css/fonts.css" />
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.baseurl }}/style/normalize.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/style/main.css">
 	</head>
