--- a/style/main.scss
+++ b/style/main.scss
@@ -3,8 +3,8 @@
 
 // Variables
 
-$font-family-gotham: 'Gotham A', 'Gotham B';
-
+$font-family-display: 'Fredoka One', cursive;
+$font-family-text: 'Roboto', sans-serif;
 $light-yellow: #FDFFDF;
 $sky-blue: #00A7FF;
 
@@ -29,7 +29,7 @@ body {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    font-family: $font-family-gotham;
+    font-family: $font-family-text;
     font-weight: 400;
     font-style: normal;
     font-size: 14px;
